--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unit tests for todolist.ToDoList</title>
+	<title>Unit tests for ToDoList</title>
 
 	<script id="sap-ui-bootstrap"
 		src="../../../resources/sap-ui-core.js"
