--- a/webapp/test/testsuite.qunit.html
+++ b/webapp/test/testsuite.qunit.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>QUnit test suite for Basic Template</title>
+	<title>Unit tests for Todo Applicaton</title>
 	<script src="../../resources/sap/ui/qunit/qunit-redirect.js"></script>
 	<script src="./testsuite.qunit.js" data-sap-ui-testsuite></script>
+	
+	  <!-- SINON JS SUPPORT START -->
+	
+	  <script type="text/javascript" src="../../../../../resources/sap/ui/thirdparty/sinon.js"></script>
+	  <script type="text/javascript" src="../../../../../resources/sap/ui/thirdparty/sinon.qunit.js"></script>
+
+  <!-- SINON JS SUPPORT END -->
 </head>
 <body>
 </body>
